<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background2" >

    <android.widget.Space
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />
    
     <TextView
         android:id="@+id/textView1"
         style="android:TextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/button1"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="180dp"
         android:layout_marginTop="60dp"
         android:ems="10"
         android:text="@string/altitude"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold" />
     
      <TextView
          android:id="@+id/textView2"
          style="android:TextViewStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/textView1"
          android:layout_below="@id/textView1"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="5dp"
          android:ems="10"
          android:text="@string/latitude"
          android:textColor="#000000"
          android:textSize="20sp"
          android:textStyle="bold" />
      
      <TextView
          android:id="@+id/textView3"
          style="android:TextViewStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/textView1"
          android:layout_below="@+id/textView2"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="5dp"
          android:ems="10"
          android:text="@string/longitude"
          android:textColor="#000000"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/textView1"
          android:layout_alignBottom="@+id/textView1"
          android:layout_toRightOf="@+id/textView2"
          android:ems="10"
          android:gravity="center"
          android:text="@string/defautInconnu"
          android:textColor="#329927"
          android:textSize="20sp"
          android:textStyle="bold" >

          <requestFocus />
      </TextView>
      
          <TextView
              android:id="@+id/textView5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView2"
              android:layout_alignLeft="@+id/textView4"
              android:layout_alignRight="@+id/textView4"
              android:ems="10"
              android:gravity="center"
              android:text="@string/defautInconnu"
              android:textColor="#329927"
              android:textSize="20sp"
              android:textStyle="bold" />
          
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:ems="10"
        android:gravity="center"
        android:text="@string/defautInconnu"
        android:textColor="#329927"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/checkBox1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:background="@drawable/localiser"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView0"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="35dp"
        android:background="@drawable/mybutton"
        android:height="100dp"
        android:text="@string/button1"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="20sp" />

</RelativeLayout>

</ScrollView>